fixed display-none for search bar on smaller devices and added favicon

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -148,3 +148,8 @@ body {
         padding: 0!important;
     }
 }
+@media (max-width: 992px) {
+.index-text {
+    padding-top: 30vh;
+}
+}
